# CodeRipple

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  verify.py
config/: coderipple.yaml
doc/: DESIGN.md  DEVELOPMENT_SUMMARY.md  PROJECT_REPORT.md  REFACTOR_RESILIENT_TRACE_PLAN.md  UV_USAGE.md
src/: __init__.py
src/cli/: main.py
src/coderipple.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/config/: __init__.py
src/core/: result.py  tracer.py
src/core/strategies/: ast_structure.py  base.py  code_block.py  commit_chain.py  similarity.py
src/git/: repo.py
src/git_ops/: __init__.py
src/git_ops/git/: repo.py
src/parser/: ast.py  features.py  normalizer.py  similarity.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_tracer_flow.py
tests/unit/: test_ast_normalizer.py  test_ast_parser.py  test_ast_structure_strategy.py  test_features.py  test_git_repo.py  test_project_structure.py  test_similarity.py  test_similarity_strategy.py  test_strategies.py
